--- a/index.html
+++ b/index.html
@@ -158,7 +158,13 @@
         <button id="add-card">ADICIONAR CARTÃO</button>
       </form>
     </div>
-
+    
+    <footer>
+    <p>
+      Created by <a href="https://www.linkedin.com/in/pierry-medeiros-1a2795166/" external>Pierry Medeiros</a> to RocketSeat Explorer Lab
+    </p>
+    </footer>
+    
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
